--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           echo "Install dependencies"
           sudo apt-get update
-          sudo apt-get install -y python-pip libprotobuf-dev libprotoc-dev protobuf-compiler
+          sudo apt-get install -y python python-pip libprotobuf-dev libprotoc-dev protobuf-compiler
           pip install grpcio-tools
       - uses: actions/checkout@v1
         with:
