--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,13 @@ jobs:
           export GOPATH=$HOME/go
           make vald
           make all
+          make vald/sha/update
+      - run: |
+          echo "commit and push"
+          sha=`make vald/sha/print`
+          git config --global user.name 'VDaaS org'
+          git config --global user.email 'ci@vdaas.org'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git add .
+          git commit -m "[skip ci] Update [vald sha: ${sha}]"
+          git push origin master
