--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = vald-client-python
-version = file: VALD_CLIENT_PYTHON_VERSION
+version = 0.0.1.post2
 url = https://github.com/vdaas/vald-client-python
 description = a client library for Vald (https://github.com/vdaas/vald).
 long_description = file: README.md
