--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,11 @@ license_file = LICENSE
 zip_safe = False
 package_dir =
   =src
-package = find:
-  where=src
+packages = find:
 install_requires=
   protobuf
   grpcio
   googleapis-common-protos
+
+[options.packages.find]
+where=src
