--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = vald-client-python
-version = 0.0.1.post3
+version = 0.0.1.post4
 url = https://github.com/vdaas/vald-client-python
 description = a client library for Vald (https://github.com/vdaas/vald).
 long_description = file: README.md
@@ -12,9 +12,11 @@ license_file = LICENSE
 zip_safe = False
 package_dir =
   =src
-package = find:
-  where=src
+packages = find:
 install_requires=
   protobuf
   grpcio
   googleapis-common-protos
+
+[options.packages.find]
+where=src
