--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           sha=`make vald/sha/print`
           git config --global user.name 'VDaaS org'
           git config --global user.email 'ci@vdaas.org'
-          git remote set-url origin https://${GITHUB_UESR}:${GITHUB_TOKEN}@github.com/$GITHUB_REPOSITORY
+          git remote set-url origin https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/$GITHUB_REPOSITORY
           git add .
           git commit -m "[skip ci] Update [vald sha: ${sha}]"
           git push
