--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Install dependencies
         run: |
           echo "Install dependencies"
-          apt-get update
-          apt-get install -y python python-pip libprotobuf-dev libprotoc-dev protobuf-compiler
+          sudo apt-get update
+          sudo apt-get install -y python python-pip libprotobuf-dev libprotoc-dev protobuf-compiler
           pip install wheel grpcio-tools
       - uses: actions/checkout@v1
         with:
