--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
         run: |
           echo "Install dependencies"
           sudo apt-get update
-          sudo apt-get install -y libprotobuf-dev libprotoc-dev protobuf-compiler
+          sudo apt-get install -y python3-setuptools libprotobuf-dev libprotoc-dev protobuf-compiler
           pip3 install grpcio-tools
       - uses: actions/checkout@v1
         with:
