--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ license_file = LICENSE
 zip_safe = False
 package_dir =
   =src
-packages = find:
+packages = find_namespace:
 install_requires=
   protobuf
   grpcio
