:green_heart: Run workflow temporarily
Signed-off-by: Rintaro Okamura <rokamura@yahoo-corp.jp>

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = 1.0.0
 url = https://github.com/vdaas/vald-client-python
 description = a client library for Vald (https://github.com/vdaas/vald).
 long_description = file: README.md
+long_description_content_type = text/markdown
 author = Rintaro Okamura
 author_email = rintaro.okamura@gmail.com
 license_file = LICENSE
