Fix to run release workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           git config --global user.email 'ci@vdaas.org'
           git remote set-url origin https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/$GITHUB_REPOSITORY
           git add .
-          git commit -m "[skip ci] Update [vald sha: ${sha}]"
+          git commit -m "Update [vald sha: ${sha}]"
           git push
         env:
           GITHUB_USER: ${{ secrets.CI_USER }}
