--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,9 @@ jobs:
           git push --tags
       - name: prepare to publish
         run: |
+          ## dirty hack: for some reason, options.packages.find.exclude
+          ## directive in setup.cfg doesn't work properly
+          rm -rf src/tests src/test.py
           python3 setup.py sdist
           python3 setup.py bdist_wheel
       - name: publish
