add filter/ingress, modify author in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,8 @@ url = https://github.com/vdaas/vald-client-python
 description = a client library for Vald (https://github.com/vdaas/vald).
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = Rintaro Okamura
-author_email = rintaro.okamura@gmail.com
+author = vald team
+author_email = vald@vdaas.org
 license_file = LICENSE
 
 [options]
