fix master to main
Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           fetch-depth: 1
       - run: |
-          echo "checkout master"
-          git checkout master
+          echo "checkout main"
+          git checkout main
       - run: |
           echo "build"
           export GOPATH=$HOME/go
