--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
       - run: |
           echo "commit and push"
           sha=`make vald/sha/print`
-          git config --global user.name 'VDaaS org'
-          git config --global user.email 'ci@vdaas.org'
+          git config --global user.name 'vdaas-ci'
+          git config --global user.email 'vald@vdaas.org'
           git remote set-url origin https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/$GITHUB_REPOSITORY
           git add .
           git commit -S -m "Update [vald sha: ${sha}]"
