Add signed commit (#14)
* add signed commit

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* fix github config

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* add signed commit

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* add fossa workflow

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* fix fossa workflow

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

---------

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,11 +28,11 @@ jobs:
       - run: |
           echo "commit and push"
           sha=`make vald/sha/print`
-          git config --global user.name 'VDaaS org'
-          git config --global user.email 'ci@vdaas.org'
+          git config --global user.name 'vdaas-ci'
+          git config --global user.email 'vald@vdaas.org'
           git remote set-url origin https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/$GITHUB_REPOSITORY
           git add .
-          git commit -m "Update [vald sha: ${sha}]"
+          git commit -S --signoff -m "Update [vald sha: ${sha}]"
           git push
         env:
           GITHUB_USER: ${{ secrets.CI_USER }}
