--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Helm version
         run: |
           helm version
+      # TODO: Delete the following step before merge.
+      - name: generate code
+        run: |
+          make PYTHON=python3 all
       - name: deploy Vald
         run: |
           helm repo add vald https://vald.vdaas.org/charts
@@ -48,7 +52,7 @@ jobs:
       - name: python dependencies
         run: |
           pip install --upgrade grpcio-tools protobuf grpcio googleapis-common-protos
-          ## dirty hack: 
+          ## dirty hack:
           sudo rm -rf /usr/lib/python3/dist-packages/validate.py
           curl -LO https://raw.githubusercontent.com/rinx/word2vecjson/master/data/wordvecs1000.json
       - name: run tests
