--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
           curl -LO https://raw.githubusercontent.com/rinx/word2vecjson/master/data/wordvecs1000.json
       - name: run tests
         run: |
-          kubectl port-forward statefulset/vald-agent-ngt 8081:8081 &
+          kubectl port-forward statefulset/vald-agent 8081:8081 &
           pid=$!
 
           python src/test.py
