fix: fix secret name
Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,4 +99,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: ${{ secrets.PIP_USERNAME }}
-          password: ${{ secrets.PIP_PASSWORD }}
+          password: ${{ secrets.PIP_TOKEN }}
