--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -27,6 +27,6 @@ jobs:
     with:
       client_type: python
     secrets:
-      CI_USER: ${{ secrets.DISPATCH_USER }}
-      CI_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
+      CI_USER: ${{ secrets.CI_USER }}
+      CI_TOKEN: ${{ secrets.CI_TOKEN }}
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
