fix: enable cron and change workflow target branch
Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -26,8 +26,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # TODO: change to the following before main merge.
-      # - uses: vdaas/vald-client-ci/.github/actions/e2e@main
-      - uses: vdaas/vald-client-ci/.github/actions/e2e@feat/add-common-workflows
+      - uses: vdaas/vald-client-ci/.github/actions/e2e@main
         with:
           client_type: python
