--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,7 @@ on:
       - 'v*.*.*-*'
 jobs:
   release:
-    # TODO: change to the following before main merge.
-    # uses: vdaas/vald-client-ci/.github/workflows/release.yaml@main
-    uses: vdaas/vald-client-ci/.github/workflows/release.yaml@feat/add-common-workflows
+    uses: vdaas/vald-client-ci/.github/workflows/release.yaml@main
     with:
       client_type: python
     secrets: inherit
