--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -17,13 +17,11 @@
 name: "Sync Vald"
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: "*/5 * * * *"
+  schedule:
+    - cron: "*/10 * * * *"
 jobs:
   sync:
-    # TODO: change to the following before main merge.
-    # uses: vdaas/vald-client-ci/.github/workflows/sync.yaml@main
-    uses: vdaas/vald-client-ci/.github/workflows/sync.yaml@feat/add-common-workflows
+    uses: vdaas/vald-client-ci/.github/workflows/sync.yaml@main
     with:
       client_type: python
     secrets:
