Introduced two version support feature  (#27)
* feat: introduce two version support feature

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* fix: deleted debug job for e2e and build proto

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* fix: deleted unnecessary workflow

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* Update .github/workflows/release.yml

Signed-off-by: Hiroto Funakoshi <hiroto.funakoshi.hiroto@gmail.com>

* Apply suggestions from code review

Signed-off-by: Hiroto Funakoshi <hiroto.funakoshi.hiroto@gmail.com>

* fix: update secret name

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* fix: enable cron and change workflow target branch

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* fix: use python3

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* fix: use PYTHON variable

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* fix: debug job for build and test and publish preapre

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

* Revert "fix: debug job for build and test and publish preapre"

This reverts commit e89ee67d4ea1274b81ea012cda8d4e6bcaa5e4f7.

* Apply suggestions from code review

Co-authored-by: datelier <57349093+datelier@users.noreply.github.com>
Signed-off-by: Hiroto Funakoshi <hiroto.funakoshi.hiroto@gmail.com>

* feat: refactor make variable

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

---------

Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>
Signed-off-by: Hiroto Funakoshi <hiroto.funakoshi.hiroto@gmail.com>
Co-authored-by: datelier <57349093+datelier@users.noreply.github.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -14,17 +14,18 @@
 # limitations under the License.
 #
 # DO NOT EDIT
-name: "Run release"
+name: "Run E2E test"
 on:
   push:
-    tags:
-      - '*.*.*'
-      - 'v*.*.*'
-      - '*.*.*-*'
-      - 'v*.*.*-*'
+    branches:
+      - main
+  pull_request:
+
 jobs:
-  release:
-    uses: vdaas/vald-client-ci/.github/workflows/release.yaml@main
-    with:
-      client_type: python
-    secrets: inherit
+  e2e:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: vdaas/vald-client-ci/.github/actions/e2e@main
+        with:
+          client_type: python
