--- a/.github/workflows/update-deps.yaml
+++ b/.github/workflows/update-deps.yaml
@@ -22,43 +22,12 @@ on:
   schedule:
     - cron: "0 12 * * *"
 jobs:
-  # update:
-  #   uses: vdaas/vald-client-ci/.github/workflows/_update-deps.yaml@main
-  #   with:
-  #     config_file_path: .github/dependabot-cli.yaml
-  #     pr_branch_name: chore/update-pip
-  #   secrets:
-  #     CI_USER: ${{ secrets.CI_USER }}
-  #     CI_TOKEN: ${{ secrets.CI_TOKEN }}
-  #     GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
   update:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.CI_TOKEN }}
-      - name: Set Git config
-        run: |
-          git config --global --add safe.directory ${GITHUB_WORKSPACE}
-      - uses: vdaas/vald-client-ci/.github/actions/dependabot@main
-        with:
-          config_file_path: .github/dependabot-cli.yaml
-      # NOTE: When running dependabot cli, if the gpg action is set before the dependabot action, it fails during Node.js dependency updates
-      - uses: crazy-max/ghaction-import-gpg@v6
-        with:
-          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-          git_user_signingkey: true
-          git_commit_gpgsign: true
-      - name: Check difference
-        id: check_diff
-        run: |
-          if git diff --quiet --exit-code; then
-            echo "Nothing updated"
-          else
-            git diff && git status
-            echo "HAS_GIT_DIFF=true" >> $GITHUB_OUTPUT
-          fi
-      - uses: vdaas/vald-client-ci/.github/actions/e2e@main
-        with:
-          client_type: python
+    uses: vdaas/vald-client-ci/.github/workflows/_update-deps.yaml@main
+    with:
+      config_file_path: .github/dependabot-cli.yaml
+      pr_branch_name: chore/update-pip
+    secrets:
+      CI_USER: ${{ secrets.CI_USER }}
+      CI_TOKEN: ${{ secrets.CI_TOKEN }}
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
