fix: deleted ref
Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

--- a/.github/workflows/tmp-sync.yaml
+++ b/.github/workflows/tmp-sync.yaml
@@ -70,6 +70,6 @@ jobs:
           git commit -S --signoff -m "Update [vald sha: ${SHA}]"
       - name: Push
         run: |
-          git push origin ${REF}
+          git push origin
         env:
           REF: fix/e2e
