--- a/.github/workflows/tmp-sync.yaml
+++ b/.github/workflows/tmp-sync.yaml
@@ -21,6 +21,7 @@ env:
   CI_USER: ${{ secrets.CI_USER }}
   CI_TOKEN: ${{ secrets.CI_TOKEN }}
   GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+  REF: fix/e2e
 
 jobs:
   sync:
@@ -29,6 +30,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ env.REF }}
           token: ${{ env.CI_TOKEN }}
       - name: Set Git config
         run: |
@@ -65,11 +67,10 @@ jobs:
         run: |
           SHA="$(make vald/sha/print)"
 
+          git branch
           git remote set-url origin https://${CI_USER}:${CI_TOKEN}@github.com/$GITHUB_REPOSITORY
           git add .
           git commit -S --signoff -m "Update [vald sha: ${SHA}]"
       - name: Push
         run: |
-          git push origin
-        env:
-          REF: fix/e2e
+          git push origin ${REF}
