fix: use nightly image
Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -84,4 +84,4 @@ jobs:
         uses: vdaas/vald-client-ci/.github/actions/e2e@main
         with:
           client_type: python
-          image_tag: ${{ env.IMAGE_TAG }}
+          image_tag: nightly
