--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -53,9 +53,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      # - uses: vdaas/vald-client-ci/.github/actions/setup-language@main
-      #   with:
-      #     client_type: python
+      - uses: vdaas/vald-client-ci/.github/actions/setup-language@main
+        with:
+          client_type: python
       - name: Clone Vald repository
         run: |
           make REPO=vdaas VALD_CHECKOUT_REF=${VALD_CHECKOUT_REF} vald/checkout
