--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -50,9 +50,9 @@ jobs:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           git_user_signingkey: true
           git_commit_gpgsign: true
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+      # - uses: actions/setup-python@v5
+      #   with:
+      #     python-version: '3.10'
       - uses: vdaas/vald-client-ci/.github/actions/setup-language@main
         with:
           client_type: python
