fix: package prepare step
Signed-off-by: hlts2 <hiroto.funakoshi.hiroto@gmail.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -80,6 +80,9 @@ jobs:
           git remote set-url origin https://${CI_USER}:${CI_TOKEN}@github.com/$GITHUB_REPOSITORY
           git add .
           git commit -S --signoff -m "Update [vald sha: ${SHA}]"
+      - name: Package creation
+        run: |
+          make REPO=vdaas ci/package/prepare
       - name: Deply Vald and Run E2E test
         uses: vdaas/vald-client-ci/.github/actions/e2e@main
         with:
