--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,8 +1,6 @@
-version: v1
-managed:
-  enabled: false
+version: v2
 plugins:
-  - plugin: buf.build/protocolbuffers/python
+  - remote: buf.build/protocolbuffers/python
     out: src
-  - plugin: buf.build/grpc/python
+  - remote: buf.build/grpc/python
     out: src
